--- a/index.html
+++ b/index.html
@@ -142,10 +142,17 @@
           <p>Why Lander</p>
           <p class="gras">Stay Turned!</p>
           <div class="parent" id="test">
-            <img class="imagefotter" src="img/petitFacebookr.png" />
+            <span id="logo" style="font-size: 30px; color: #f38e58">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-linkedin-in"></i>
+            </span>
+
+            <!-- <img class="imagefotter" src="img/petitFacebookr.png" />
             <img class="imagefotter" src="img/petitTwitter.png" />
             <img class="imagefotter" src="img/petitInstagram.png" />
-            <img class="imagefotter" src="img/petitLink.png" />
+            <img class="imagefotter" src="img/petitLink.png" /> -->
           </div>
         </div>
         <div>
@@ -167,5 +174,9 @@
         </p>
       </div>
     </footer>
+    <script
+      src="https://kit.fontawesome.com/4cc9e726b0.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
