Modif Methode CSS

--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&family=Rubik:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Rubik:wght@500&display=swap"
       rel="stylesheet"
     />
@@ -26,8 +30,23 @@
       <p class="rectdayfree"></p>
       <p class="login"></p>
       <h1>CONTACT US</h1>
-      <i class="fab fa-facebook-f"></i>
+      <p class="reachout">REACH OUT TO US!</p>
+      <p class="lander">LANDER TEAM</p>
+      <p class="goa">
+        Go a question about Lander? Want to partner with us ? Have some
+        suggestion or just want to say « Hi » ? Contact Us :
+      </p>
+      <p class="firstname">First Name</p>
+      <p class="firstname1">Last Name</p>
+      <p class="firstname2">Your Email Address</p>
+      <p class="firstname3">Phone Number</p>
+      <p class="firstname4">Message</p>
     </header>
+
+    <p class="footer"></p>
+    <p class="footer1">
+      2021 Lander. All right reserved. Terms of Use and Privacy Policy
+    </p>
     <script
       src="https://kit.fontawesome.com/4cc9e726b0.js"
       crossorigin="anonymous"
