--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Rubik:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Page Contact Lander</title>
   </head>
   <body>
     <header>
@@ -26,10 +26,17 @@
         Products&nbsp;&nbsp;&nbsp; &nbsp;Templates &nbsp;&nbsp;&nbsp;&nbsp;
         Pricing&nbsp;&nbsp;&nbsp; Resources&nbsp;&nbsp;&nbsp; Blog
       </p>
-      <p class="dayfree">14 DAY FREE TRIAL</p>
-      <p class="rectdayfree"></p>
-      <p class="login"></p>
+      <!-- <p class="dayfree">14 DAY FREE TRIAL</p> -->
+      <button class="buttonfree">14 DAY FREE TRIAL</button>
+      <button class="buttonlogin">LOG IN</button>
+
+      <!-- <p class="rectdayfree"></p> -->
+      <!-- <p class="login"></p> -->
       <h1>CONTACT US</h1>
+      <p class="ourdream">
+        Our dream team of conversion specialists are looking forward to hearing
+        from you !
+      </p>
       <p class="reachout">REACH OUT TO US!</p>
       <p class="lander">LANDER TEAM</p>
       <p class="goa">
@@ -41,11 +48,94 @@
       <p class="firstname2">Your Email Address</p>
       <p class="firstname3">Phone Number</p>
       <p class="firstname4">Message</p>
+      <button class="button1">SUBMIT</button>
+      <p class="goa1">
+        Not sure where to start? Need help adding that extra mojo to your
+        landing page? Visit our Help Center or get in touch with us:
+      </p>
+      <p class="others">Others ways to connect</p>
+      <p class="textfacebook">
+        Be the first on your block to get product updates, announcements, news
+        and lots of really good content,
+        <span style="font-size: 18px; color: #f38e58">like us on Facebook</span>
+        today!
+      </p>
+      <p class="texttwitter">
+        Want the best tips on conversion optimization, landing pages, content
+        marketing, SEO & SEM? Then
+        <span style="font-size: 18px; color: #f38e58"
+          >follow us on Twitter at @landerapp</span
+        >
+      </p>
+      <p class="textinded">
+        <span style="font-size: 18px; color: #f38e58">
+          Follow us on LinkedIn</span
+        >
+        to get the latest updates, news and information about us and also check
+        our weekly blog updates!
+      </p>
+      <p class="logofacebook">
+        <img src="logoFacebook.png" alt="Facebook" width="65" height="65" />
+      </p>
+
+      <p class="logotwitter">
+        <img src="logoTwitter.png" alt="Twitter" width="65" height="65" />
+      </p>
+
+      <p class="logoinded">
+        <img src="logoInpng.png" alt="Inded" width="65" height="65" />
+      </p>
     </header>
 
     <p class="footer"></p>
+    <p class="aboutlander">
+      <span style="font-size: 16px; color: #ffffff">About Lander</span><br />
+      Landing Pages<br />
+      Landing Page Templates<br />
+      Online Marketing Resources<br />
+      Features<br />
+      Integration<br />
+      Inbound Marketing<br />
+    </p>
+    <p class="help">
+      <span style="font-size: 16px; color: #ffffff">Help</span><br />
+      Help<br />
+      Support<br />
+      Help Center<br />
+    </p>
+    <p class="ressources">
+      <span style="font-size: 16px; color: #ffffff">Resources</span><br />
+      Resources<br />
+      Ebooks<br />
+      Infographics<br />
+    </p>
+    <p class="landingpages">
+      <span style="font-size: 16px; color: #ffffff">Landing Pages</span><br />
+      Landing Pages<br />
+    </p>
+    <p class="commercial">
+      <span style="font-size: 16px; color: #ffffff">Commercial</span><br />
+      Why Lander<br />
+      Pricing<br /><br />
+      <span style="font-size: 16px; color: #cacaca">Stay Stuned !</span><br />
+
+      <span id="logo-min" style="font-size: 30px; color: #f38e58">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-linkedin-in"></i>
+      </span>
+    </p>
+    <p class="trylander">
+      <span style="font-size: 16px; color: #ffffff">Try Lander for Free</span
+      ><br />
+      Start a 14 Day Free Trial on any of our paid. No credit car required.
+    </p>
+    <button class="button">CREATE YOUR LANDING PAGE</button>
     <p class="footer1">
-      2021 Lander. All right reserved. Terms of Use and Privacy Policy
+      2021 Lander. All right reserved.<span style="color: #f38e58">
+        Terms of Use and Privacy Policy</span
+      >
     </p>
     <script
       src="https://kit.fontawesome.com/4cc9e726b0.js"
