--- a/index1.html
+++ b/index1.html
@@ -108,10 +108,20 @@
       Resources<br />
       Ebooks<br />
       Infographics<br />
+      Tools<br />
+      Videos<br />
+      Podcasts
     </p>
     <p class="landingpages">
       <span style="font-size: 16px; color: #ffffff">Landing Pages</span><br />
       Landing Pages<br />
+      What is a Landing Page<br />
+      PPC Ads<br />
+      SEO Trafic<br />
+      Mobile Landing Page<br />
+      Content Writting<br />
+      Buyer Personas<br />
+      Target Audience<br />
     </p>
     <p class="commercial">
       <span style="font-size: 16px; color: #ffffff">Commercial</span><br />
