modif repertoire img

--- a/index1.html
+++ b/index1.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <img src="lander.png" class="imglander" />
+      <img src="img/lander.png" class="imglander" />
       <p class="menuhaut">
         Products&nbsp;&nbsp;&nbsp; &nbsp;Templates &nbsp;&nbsp;&nbsp;&nbsp;
         Pricing&nbsp;&nbsp;&nbsp; Resources&nbsp;&nbsp;&nbsp; Blog
@@ -75,15 +75,15 @@
         our weekly blog updates!
       </p>
       <p class="logofacebook">
-        <img src="logoFacebook.png" alt="Facebook" width="65" height="65" />
+        <img src="img/logoFacebook.png" alt="Facebook" width="65" height="65" />
       </p>
 
       <p class="logotwitter">
-        <img src="logoTwitter.png" alt="Twitter" width="65" height="65" />
+        <img src="img/logoTwitter.png" alt="Twitter" width="65" height="65" />
       </p>
 
       <p class="logoinded">
-        <img src="logoInpng.png" alt="Inded" width="65" height="65" />
+        <img src="img/logoInpng.png" alt="Inded" width="65" height="65" />
       </p>
     </header>
 
