--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         <h2>LANDER TEAM</h2>
 
         <p>
-          Not sure where to start? Need help adding that extra mojo to your<br />
+          Not sure where to start? Need help adding that extra mojo to your
           landing page? Visit our Help Center or get in touch with us:
         </p>
         <br />
