--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
           placeholder="   Message"
         ></textarea>
 
-        <span> <button id="submit">submit</button></span>
+        <span> <button id="submit">SUBMIT</button></span>
       </div>
       <div id="gauche">
         <h2>LANDER TEAM</h2>
